...
                .hideKeyboard()
                .verticalScroll(rememberScrollState())
                .fillMaxWidth()
                .padding(start = 20.dp, end = 20.dp, top = 10.dp, bottom = 24.dp)
        ) {
            KarikaText(
                text = "Izmijeni narudžbu",
                color = KarikaUiColors.Ink,
                textSize = 20.sp,
                lineHeight = 24.sp,
                fontWeight = FontWeight.W700
            )
            if (!product.value?.name.isNullOrEmpty()) {
...
                maxLength = 3,
                error = rabatError.value,
                trailingText = "%",
                onValueChange = {
                    if (it.toIntOrNull() != null) {
                        if (it.toInt() > 100) {
                            rabatError.value = "Rabat ne može biti veći od 100%"
                        } else {
                            rabatError.value = ""
                        }
                    } else {
                        rabatError.value = "Rabat je obavezan!"
                    }
...
                allowedChars = KarikaConstants.numbers,
                leadingZero = false,
                error = qtyError.value,
                onValueChange = {
                    if (it.toIntOrNull() != null) {
                        if (it.toInt() == 0) {
                            qtyError.value = "Količina ne može biti nula"
                        } else {
                            qtyError.value = ""
                        }
                    } else {
                        qtyError.value = "Količina je obavezna!"
                    }
...
